[package]
name = "nvml-tune"
version = "0.1.0"
edition = "2021"
authors = ["flippette <quangdatle2006@outlook.com>"]
license = "Unlicense"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
nvml-wrapper-sys = { git = "https://github.com/Cldfire/nvml-wrapper.git", rev = "1d71e81" }
sudo = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
